--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<b><marquee>Success</marquee></b>
+<!--[if IE 8]>			<html class="ie ie8"> <![endif]-->
+<!--[if IE 9]>			<html class="ie ie9"> <![endif]-->
+<!--[if gt IE 9]><!-->	<html> <!--<![endif]-->
+
+<body class="smoothscroll enable-animation grain-green"   ng-app="taggApp" ng-controller="myCtrl">
+
+
+  <div>
+      <input class="form-control" ng-model="newsEnter"><button ng-click="addNews();">Add</button><button ng-click="updateNews()">Update</button>
+      <li ng-repeat="news in taggNews">{{news.newsEntry}}<button class="btn-aqua" ng-click="editNews(news._id,edit);">edit</button> <button class="btn-danger" ng-click="editNews(news._id,delete);">delete</button></li>
+
+  </div>
+
+<!-- /wrapper -->
+<!-- /PRELOADER -->
+
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script type="text/javascript" src="taggCtrl.js"></script>
+
+
+<!-- SWIPER SLIDER 
+<script type="text/javascript" src="assets/plugins/slider.swiper/dist/js/swiper.min.js"></script>
+<script type="text/javascript" src="assets/js/view/demo.swiper_slider.js"></script> -->
 </body>
 </html>
