--- a/contacts/index.html
+++ b/contacts/index.html
@@ -15,7 +15,7 @@
 <!-- /wrapper -->
 <!-- /PRELOADER -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="angular.min.js"></script>
 <script type="text/javascript" src="taggCtrl.js"></script>
 
 
