--- a/contacts/index.html
+++ b/contacts/index.html
@@ -7,8 +7,11 @@
 
 
   <div>
-      <input class="form-control" ng-model="newsEnter"><button ng-click="addNews();">Add</button><button ng-click="updateNews()">Update</button>
-      <li ng-repeat="news in taggNews">{{news.newsEntry}}<button class="btn-aqua" ng-click="editNews(news._id,edit);">edit</button> <button class="btn-danger" ng-click="deleteNews(news._id,delete);">delete</button></li>
+     Name: <input class="form-control" ng-model="name">
+   Comments:   <input class="form-control" ng-model="newsEnter">
+     Email: <input class="form-control" ng-model="email">
+      <button ng-click="addNews();">Add</button><button ng-click="updateNews()">Update</button>
+      <div ng-repeat="news in taggNews"><b>{{news.name}}</b><i>{{news.comment}}</i> <b><i>{{news.email}}</i></b><button class="btn-aqua" ng-click="editNews(news._id,edit);">edit</button> <button class="btn-danger" ng-click="deleteNews(news._id,delete);">delete</button></div>
 
   </div>
 
